# cuda_linalg

./: CMakeLists.txt  README.md  a.out  cpu  gpu  main.cu  vecadd.cc  vecadd.cu
linalg/: cuda_utils.cu  cuda_utils.cuh  kernels.cu  linalg.cuh  matrix.cu  matrix.cuh  vector.cu  vector.cuh
